Stable versions
---------------

3.2.0 ():
	- Digital Symphony fixes by Tom Hargreaves
	- Archimedes Tracker fixes by Tom Hargreaves
	- add shared logarithmic volume table for Archimedes formats
	- fix default Archimedes formats pan (RLLR instead of LRRL)
	- add Coconizer file loader
	- portability fixes for BeOS and Haiku
	- code cleanup and optimizations

3.1.0 (20100107):
	- implement MED4 instrument transposition
	- fix build with MSVC++ 2008
	- fix bogus information in winamp plugin file info display
	- fix Audacious plugin dialog stacking order (by Michael Schwendt)
	- add Titanics Player prowizard loader
	- add SKYT Packer prowizard loader
	- add Novotrade Packer prowizard loader
	- add Hornet Packer prowizard loader
	- fix empty instruments in Digital Illusions loader
	- fix silent Liquid Tracker module bug
	- add Magnetic Fields Packer loader
	- add The Player 6.1a prowizard loader
	- add StoneCracker S404 decompressor (from amigadepacker)
	- add extra Funktracker file tests to prevent false positives
	- add Polly Tracker module loader
	- code cleanup and optimizations

3.0.1 (20091221):
	- better handling of corrupted modules
	- load Real Tracker RTMM 1.12 modules (tested with odyssey.rtm)
	- fix tuning of Real Tracker modules
	- fix Real Tracker patern decoding
	- fix segfault in modules with 0 orders or 0 channels
	- fix loading of MED4 module patterns with less than 32 lines
	- fix memory leak when loading corrupt MED4 files

3.0.0 (20091210): 13 years after the 0.09b release
	- allow parallel build (R.I.P. 1996 buildsystem)
	- implement the long postponed open player loop 
	- generate win32 project files when packaging distfile
	- remove callback driver
	- split unified flags/quirks into separate variables
	- add elapsed time echoback event
	- add option to display elapsed and remaining time
	- implement IT volume column fine effects quirk (Storlek test #6)
	- fix bmp plugin build
	- fix FreeBSD build (by swell k)