@@ -9,6 +9,8 @@ Stable versions
 	- add Coconizer file loader
 	- portability fixes for BeOS and Haiku
 	- code cleanup and optimizations
+	- Android port using NDK
+	- fix time echoback event for MED
 
 3.1.0 (20100107):
 	- implement MED4 instrument transposition
